# school-finder

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
.devcontainer/: devcontainer.json
app/: __init__.py  data.py  main.py  scraper.py
app/templates/: base.html  index.html  school_detail.html  vo_index.html  vo_school_detail.html
app/templates/partials/: school_cards.html  vo_school_cards.html
data/: combined.parquet  coordinates.parquet  enrollment_raw.parquet  leerresultaten.ods  onderwijsconcept.parquet  schools_raw.parquet  schoolweging.ods  scores_3year.parquet  scores_raw.parquet  signaleringswaarden.parquet  vo_combined.parquet  vo_doorstroom_calculated.parquet  vo_doorstroom_raw.parquet  vo_exam_grades_2021-2022.parquet  vo_exam_grades_2022-2023.parquet  vo_exam_grades_2023-2024.parquet  vo_exam_grades_calculated.parquet  vo_exam_results_raw.parquet  vo_schools_raw.parquet
