[project]
name = "school-finder"
version = "0.1.0"
description = "Dutch primary school comparison tool with performance sorting"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "polars>=1.0.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.9",
    "pyarrow>=15.0.0",
    "playwright>=1.40.0",
    "fastexcel>=0.19.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
